--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_flipperkit: ^0.0.8
-
-    
-    
-  carousel_pro: ^0.0.13 #no indention
+  firebase_auth: ^0.8.3
+  cloud_firestore: ^0.9.7
+  google_sign_in: ^4.0.1+1
+  shared_preferences: ^0.5.1+2
+  carousel_pro: ^0.0.13 
+  fluttertoast: ^3.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
